# apple-bloom

./: .gitignore  Cargo.toml  README.md
data/v2/: petstore_minimal.yaml
data/v3.0/: api-with-examples.yaml  petstore-expanded.yaml  petstore.yaml  uspto.yaml
examples/: printer.rs
src/: error.rs  lib.rs  util.rs
src/v2/: mod.rs  schema.rs
src/v3/: components.rs  extension.rs  mod.rs  schema.rs
src/v3_0/: components.rs  extension.rs  helper.rs  mod.rs  schema.rs  schema_object.rs
