[package]
name = "apple-bloom"
version = "0.1.5"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust bindings for openapi schemas"
documentation = "https://softprops.github.io/openapi"
homepage = "https://github.com/softprops/openapi"
repository = "https://github.com/softprops/openapi"
keywords = ["openapi", "swagger"]
license = "MIT"
edition = "2018"

[dependencies]
failure = "0.1.8"
semver = "1.0.7"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
thiserror = "1.0.30"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.57"
pretty_assertions = "1.2.1"
serde_test = "1.0.136"
